syntax = "proto3";

option csharp_namespace = "MarketData.Service";

package marketdata;

service MarketDataProtoService {
  rpc GetPrice (PriceRequest) returns (PriceReply);
  rpc GetPrices (PriceListRequest) returns (PriceListReply);
}

message PriceRequest {
  string symbol = 1;
}

message PriceReply {
  string symbol = 1;
  double price = 2;
}

message PriceListRequest {
  repeated string symbols = 1;
}

message PriceListReply {
  repeated PriceReply prices = 1;
}
